--- a/package.json
+++ b/package.json
@@ -23,33 +23,34 @@
     "devDependencies": {
         "@almamedia/cdk-accounts-and-environments": "^0.4.0",
         "@almamedia/cdk-regions": "0.0.1",
-        "@almamedia/cdk-tag-and-name": "^1.0.0",
-        "@aws-cdk/assert": "1.89.0",
-        "@aws-cdk/assets": "1.89.0",
-        "@aws-cdk/aws-apigateway": "1.89.0",
-        "@aws-cdk/aws-apigatewayv2": "1.89.0",
-        "@aws-cdk/aws-cloudwatch": "1.89.0",
-        "@aws-cdk/aws-ec2": "1.89.0",
-        "@aws-cdk/aws-elasticache": "1.89.0",
-        "@aws-cdk/aws-elasticloadbalancingv2": "1.89.0",
-        "@aws-cdk/aws-events": "1.89.0",
-        "@aws-cdk/aws-events-targets": "1.89.0",
-        "@aws-cdk/aws-iam": "1.89.0",
-        "@aws-cdk/aws-lambda": "1.89.0",
-        "@aws-cdk/aws-lambda-event-sources": "1.89.0",
-        "@aws-cdk/aws-logs": "1.89.0",
-        "@aws-cdk/aws-rds": "1.89.0",
-        "@aws-cdk/aws-route53": "1.89.0",
-        "@aws-cdk/aws-sns": "1.89.0",
-        "@aws-cdk/aws-sns-subscriptions": "1.89.0",
-        "@aws-cdk/aws-sqs": "1.89.0",
-        "@aws-cdk/core": "1.89.0",
+        "@almamedia/cdk-tag-and-name": "^1.1.1",
+        "@aws-cdk/assert": "1.91.0",
+        "@aws-cdk/assets": "1.91.0",
+        "@aws-cdk/aws-apigateway": "1.91.0",
+        "@aws-cdk/aws-apigatewayv2": "1.91.0",
+        "@aws-cdk/aws-cloudwatch": "1.91.0",
+        "@aws-cdk/aws-ec2": "1.91.0",
+        "@aws-cdk/aws-elasticache": "1.91.0",
+        "@aws-cdk/aws-elasticloadbalancingv2": "1.91.0",
+        "@aws-cdk/aws-events": "1.91.0",
+        "@aws-cdk/aws-events-targets": "1.91.0",
+        "@aws-cdk/aws-iam": "1.91.0",
+        "@aws-cdk/aws-lambda": "1.91.0",
+        "@aws-cdk/aws-lambda-event-sources": "1.91.0",
+        "@aws-cdk/aws-logs": "1.91.0",
+        "@aws-cdk/aws-rds": "1.91.0",
+        "@aws-cdk/aws-route53": "1.91.0",
+        "@aws-cdk/aws-sns": "1.91.0",
+        "@aws-cdk/aws-sns-subscriptions": "1.91.0",
+        "@aws-cdk/aws-sqs": "1.91.0",
+        "@aws-cdk/core": "1.91.0",
         "@types/aws-lambda": "^8.10.71",
         "@types/jest": "^26.0.10",
         "@types/node": "10.17.27",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
-        "aws-cdk": "1.89.0",
+        "aws-cdk": "1.91.0",
+        "change-case": "^4.1.2",
         "concurrently": "^5.3.0",
         "eslint": "^7.19.0",
         "eslint-config-prettier": "^7.2.0",
