--- a/infra/package.json
+++ b/infra/package.json
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "@almamedia/cdk-accounts-and-environments": "^0.4.0",
+        "@almamedia/cdk-assumed-credentials-provider": "^0.2.0",
         "@almamedia/cdk-regions": "0.0.1",
         "@almamedia/cdk-tag-and-name": "^1.1.1",
         "@aws-cdk/assert": "1.91.0",
