feat: force node and npm versions

--- a/infra/.npmrc
+++ b/infra/.npmrc
@@ -2,3 +2,5 @@
 registry=https://almamedia-277005280161.d.codeartifact.eu-west-1.amazonaws.com/npm/cdk/
 //almamedia-277005280161.d.codeartifact.eu-west-1.amazonaws.com/npm/cdk/:always-auth=true
 //almamedia-277005280161.d.codeartifact.eu-west-1.amazonaws.com/npm/cdk/:_authToken=${CODEARTIFACT_AUTH_TOKEN}
+
+engine-strict=true
