--- a/infra/package.json
+++ b/infra/package.json
@@ -1,6 +1,10 @@
 {
     "name": "ovipro",
     "version": "0.1.0",
+    "engines": {
+        "node": ">=14.16.0 <15.0.0",
+        "npm": ">=6.14.11 <7.0.0"
+    },
     "bin": {
         "infra": "bin/app.js"
     },
