feat: update deps and shared resources

--- a/infra/package.json
+++ b/infra/package.json
@@ -9,16 +9,16 @@
         "infra": "bin/app.js"
     },
     "config": {
-        "lambda_build_prefix": "ncc build --source-map --minify functions",
+        "lambda_build_prefix": "npx @vercel/ncc@0.27.0 build --source-map --minify functions",
         "lambda_build_suffix": "-o dist/functions"
     },
     "scripts": {
-        "build": "tsc",
-        "build:all": "npm run clean && tsc && npm run build:lambda",
+        "build": "npx tsc",
+        "build:all": "npm run clean && npx tsc && npm run build:lambda",
         "watch": "node ./node_modules/typescript/bin/tsc -w",
         "lint:es": "eslint '*/**/*.{ts,tsx}' --max-warnings 0",
-        "cdk": "cdk",
-        "test": "tsc && jest --runInBand",
+        "cdk": "npx cdk",
+        "test": "npx tsc && jest --runInBand",
         "test:watch": "jest --watch",
         "clean": "npx rimraf '+(bin|lib|functions|__test__|utils)/**/+(*.d.ts|*.js)'",
         "build:application": "concurrently 'npm:build:lambda'",
@@ -28,45 +28,58 @@
     "devDependencies": {
         "@almamedia/cdk-accounts-and-environments": "^0.5.0",
         "@almamedia/cdk-assumed-credentials-provider": "^0.2.0",
+        "@almamedia/cdk-cross-region-parameter": "0.0.2",
         "@almamedia/cdk-regions": "0.0.1",
         "@almamedia/cdk-tag-and-name": "^1.1.1",
-        "@aws-cdk/assert": "1.91.0",
-        "@aws-cdk/assets": "1.91.0",
-        "@aws-cdk/aws-apigateway": "1.91.0",
-        "@aws-cdk/aws-apigatewayv2": "1.91.0",
-        "@aws-cdk/aws-cloudwatch": "1.91.0",
-        "@aws-cdk/aws-ec2": "1.91.0",
-        "@aws-cdk/aws-elasticache": "1.91.0",
-        "@aws-cdk/aws-elasticloadbalancingv2": "1.91.0",
-        "@aws-cdk/aws-events": "1.91.0",
-        "@aws-cdk/aws-events-targets": "1.91.0",
-        "@aws-cdk/aws-iam": "1.91.0",
-        "@aws-cdk/aws-lambda": "1.91.0",
-        "@aws-cdk/aws-lambda-event-sources": "1.91.0",
-        "@aws-cdk/aws-logs": "1.91.0",
-        "@aws-cdk/aws-rds": "1.91.0",
-        "@aws-cdk/aws-route53": "1.91.0",
-        "@aws-cdk/aws-sns": "1.91.0",
-        "@aws-cdk/aws-sns-subscriptions": "1.91.0",
-        "@aws-cdk/aws-sqs": "1.91.0",
-        "@aws-cdk/core": "1.91.0",
+        "@aws-cdk/assert": "1.100.0",
+        "@aws-cdk/assets": "1.100.0",
+        "@aws-cdk/aws-apigateway": "1.100.0",
+        "@aws-cdk/aws-apigatewayv2": "1.100.0",
+        "@aws-cdk/aws-certificatemanager": "1.100.0",
+        "@aws-cdk/aws-cloudwatch": "1.100.0",
+        "@aws-cdk/aws-cloudwatch-actions": "1.100.0",
+        "@aws-cdk/aws-cloudfront": "1.100.0",
+        "@aws-cdk/aws-cloudformation": "1.100.0",
+        "@aws-cdk/aws-cloudfront-origins": "1.100.0",
+        "@aws-cdk/aws-codedeploy": "1.100.0",
+        "@aws-cdk/custom-resources": "1.100.0",
+        "@aws-cdk/aws-ec2": "1.100.0",
+        "@aws-cdk/aws-ecr-assets": "1.100.0",
+        "@aws-cdk/aws-ecs-patterns": "1.100.0",
+        "@aws-cdk/aws-elasticache": "1.100.0",
+        "@aws-cdk/aws-elasticloadbalancingv2": "1.100.0",
+        "@aws-cdk/aws-events": "1.100.0",
+        "@aws-cdk/aws-events-targets": "1.100.0",
+        "@aws-cdk/aws-iam": "1.100.0",
+        "@aws-cdk/aws-lambda": "1.100.0",
+        "@aws-cdk/aws-lambda-event-sources": "1.100.0",
+        "@aws-cdk/aws-logs": "1.100.0",
+        "@aws-cdk/aws-rds": "1.100.0",
+        "@aws-cdk/aws-route53": "1.100.0",
+        "@aws-cdk/aws-route53-targets": "1.100.0",
+        "@aws-cdk/aws-sns": "1.100.0",
+        "@aws-cdk/aws-sns-subscriptions": "1.100.0",
+        "@aws-cdk/aws-sqs": "1.100.0",
+        "@aws-cdk/aws-ssm": "1.100.0",
+        "@aws-cdk/aws-wafv2": "1.100.0",
+        "@aws-cdk/core": "1.100.0",
         "@types/aws-lambda": "^8.10.71",
-        "@types/jest": "^26.0.10",
+        "@types/jest": "^26.0.23",
         "@types/node": "10.17.27",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
-        "aws-cdk": "1.91.0",
+        "aws-cdk": "1.100.0",
         "change-case": "^4.1.2",
         "concurrently": "^5.3.0",
         "eslint": "^7.19.0",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-prettier": "^3.3.1",
         "husky": "^4.3.8",
-        "jest": "^26.4.2",
+        "jest": "^26.6.3",
         "lint-staged": "^10.5.3",
         "prettier": "^2.2.1",
         "source-map-support": "^0.5.19",
-        "ts-jest": "^26.2.0",
+        "ts-jest": "^26.5.5",
         "ts-node": "^9.0.0",
         "typescript": "^4.1.3"
     },
