--- a/infra/package.json
+++ b/infra/package.json
@@ -19,6 +19,7 @@
         "lint:es": "eslint '*/**/*.{ts,tsx}' --max-warnings 0",
         "cdk": "npx cdk",
         "test": "npx tsc && jest --runInBand",
+        "test:update": "jest --runInBand -u",
         "test:watch": "jest --watch",
         "clean": "npx rimraf '+(bin|lib|functions|__test__|utils)/**/+(*.d.ts|*.js)'",
         "build:application": "concurrently 'npm:build:lambda'",
