--- a/.github/workflows/openapi-lint.yml
+++ b/.github/workflows/openapi-lint.yml
@@ -22,3 +22,22 @@ jobs:
       uses: vaibhav-jain/spectral-action/@v2.6
       with:
         file_path: api-specs/*.yml  
+    ################################
+    # Run Linter against code base #
+    ################################
+    - name: Lint Code Base
+      continue-on-error: true
+      uses: github/super-linter@v3
+      env:
+        VALIDATE_ALL_CODEBASE: false
+        DEFAULT_BRANCH: main
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        VALIDATE_JAVA: false
+        VALIDATE_JAVASCRIPT_ES: false
+        VALIDATE_JAVASCRIPT_STANDARD: false
+        VALIDATE_JSX: false
+        VALIDATE_KOTLIN: false
+        VALIDATE_SQL: false
+        VALIDATE_TSX: false
+        VALIDATE_TYPESCRIPT_ES: false
+        VALIDATE_TYPESCRIPT_STANDARD: false   
