--- a/.github/workflows/preview-pipeline.yml
+++ b/.github/workflows/preview-pipeline.yml
@@ -69,6 +69,7 @@ jobs:
           projectBaseDir: ./infra
           args: >
             -Dsonar.organization=almamedia
+            -Dsonar.moduleKey=${{ github.event.repository.name }}:${{ github.event.repository.name }}:${{ github.run_id }}
             -Dsonar.projectKey=almamedia_${{ github.event.repository.name }}
             -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
             -Dsonar.testExecutionReportPaths=test-report.xml
