--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -43,3 +43,20 @@ jobs:
         VALIDATE_JSCPD: false
         VALIDATE_MARKDOWN: false
         VALIDATE_SHELL_SHFMT: false
+    - name: SonarCloud scan
+      uses: sonarsource/sonarcloud-github-action@master
+      with:
+        projectBaseDir: ./infra
+        args: >
+          -Dsonar.organization=almamedia
+          -Dsonar.moduleKey=${{ github.event.repository.name }}:${{ github.event.repository.name }}:${{ github.run_id }}
+          -Dsonar.projectKey=almamedia_${{ github.event.repository.name }}
+          -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+          -Dsonar.testExecutionReportPaths=test-report.xml
+          -Dsonar.branch.name=${{ github.event.ref }}
+          -Dsonar.branch.target=main
+          -Dsonar.exlusions=**/node_modules/**,**/*.test.ts,**/*.java
+          -Dsonar.java.source=11
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.MEPA_ASUMINEN_GH_ACTIONS_BOT_SONARCLOUD_TOKEN }}
