--- a/.github/workflows/preview-pipeline.yml
+++ b/.github/workflows/preview-pipeline.yml
@@ -76,6 +76,10 @@ jobs:
             -Dsonar.projectKey=almamedia_${{ github.event.repository.name }}
             -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
             -Dsonar.testExecutionReportPaths=test-report.xml
+            -Dsonar.branch.name=${{ github.event.ref }}
+            -Dsonar.branch.target=main
+            -Dsonar.exlusions=**/node_modules/**,**/*.test.ts,**/*.java
+            -Dsonar.java.source=11
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.MEPA_ASUMINEN_GH_ACTIONS_BOT_SONARCLOUD_TOKEN }}
