--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -74,11 +74,11 @@ jobs:
             -Dsonar.organization=almamedia
             -Dsonar.moduleKey=${{ github.event.repository.name }}:${{ github.event.repository.name }}:${{ github.run_id }}
             -Dsonar.projectKey=almamedia_${{ github.event.repository.name }}
-            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+            -Dsonar.typescript.lcov.reportPaths=coverage/lcov.info
             -Dsonar.testExecutionReportPaths=test-report.xml
             -Dsonar.branch.name=${{ github.event.ref }}
             -Dsonar.branch.target=main
-            -Dsonar.exlusions=**/node_modules/**,**/*.test.ts,**/*.java
+            -Dsonar.exlusions=**/node_modules/**,**/*.test.ts,**/java/**
             -Dsonar.java.source=11
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
