--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -68,6 +68,7 @@ jobs:
         env:
           FLYWAY_VERSION: 7.8.1
           SCHEMA_NAME: name_of_schema
+          DB_URI: url_to_PG
         run: |
           curl -L https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/${{env.FLYWAY_VERSION}}/flyway-commandline-${{env.FLYWAY_VERSION}}.tar.gz -o flyway-commandline-${{env.FLYWAY_VERSION}}.tar.gz && tar -xzf flyway-commandline-${{env.FLYWAY_VERSION}}.tar.gz --strip-components=1 && rm flyway-commandline-${{env.FLYWAY_VERSION}}.tar.gz
           PATH=/flyway:$PATH
