update registry to github packages (#22)
* update registry to github packages

--- a/infra/.npmrc
+++ b/infra/.npmrc
@@ -1,6 +1,7 @@
-# alma's codeartifact packages
-@almamedia:registry=https://almamedia-277005280161.d.codeartifact.eu-west-1.amazonaws.com/npm/cdk/
-//almamedia-277005280161.d.codeartifact.eu-west-1.amazonaws.com/npm/cdk/:always-auth=true
-//almamedia-277005280161.d.codeartifact.eu-west-1.amazonaws.com/npm/cdk/:_authToken=${CODEARTIFACT_AUTH_TOKEN}
+//registry.npmjs.org
+# alma's github packages
+@almamedia:registry=https://npm.pkg.github.com
+# doesnt make sense, but authToken wont work in GHP if its not defined in own row
+//npm.pkg.github.com/:_authToken=${GITHUB_ACCESS_TOKEN}
 
 engine-strict=true
