--- a/infra/package.json
+++ b/infra/package.json
@@ -32,12 +32,13 @@
         "build:lambda:ts:sample": "$npm_package_config_lambda_build_prefix/sample/api/handler/index.ts $npm_package_config_lambda_build_suffix/sample/api/handler"
     },
     "devDependencies": {
-        "@almamedia/cdk-accounts-and-environments": "^0.5.0",
-        "@almamedia/cdk-assumed-credentials-provider": "^0.2.0",
-        "@almamedia/cdk-cross-region-parameter": "0.0.2",
-        "@almamedia/cdk-regions": "0.0.1",
-        "@almamedia/cdk-open-api": "^0.8.0",
-        "@almamedia/cdk-tag-and-name": "^1.1.1",
+        "@almamedia/cdk-cross-region-parameter": "^0.1.1",
+        "@almamedia/cdk-regions": "^0.1.0",
+        "@almamedia/cdk-dynamodb-export": "^0.4.0",
+        "@almamedia/cdk-assumed-credentials-provider": "^0.4.0",
+        "@almamedia/cdk-open-api": "^0.9.0",
+        "@almamedia/cdk-tag-and-name": "^1.3.0",
+        "@almamedia/cdk-accounts-and-environments": "^0.7.0",
         "@aws-cdk/assert": "1.100.0",
         "@aws-cdk/assets": "1.100.0",
         "@aws-cdk/aws-apigateway": "1.100.0",
