--- a/infra/package.json
+++ b/infra/package.json
@@ -39,67 +39,67 @@
         "@almamedia/cdk-open-api": "^0.9.0",
         "@almamedia/cdk-tag-and-name": "^1.3.0",
         "@almamedia/cdk-accounts-and-environments": "^0.7.0",
-        "@aws-cdk/assert": "1.100.0",
-        "@aws-cdk/assets": "1.100.0",
-        "@aws-cdk/aws-apigateway": "1.100.0",
-        "@aws-cdk/aws-apigatewayv2": "1.100.0",
-        "@aws-cdk/aws-certificatemanager": "1.100.0",
-        "@aws-cdk/aws-cloudwatch": "1.100.0",
-        "@aws-cdk/aws-cloudwatch-actions": "1.100.0",
-        "@aws-cdk/aws-cloudfront": "1.100.0",
-        "@aws-cdk/aws-cloudformation": "1.100.0",
-        "@aws-cdk/aws-cloudfront-origins": "1.100.0",
-        "@aws-cdk/aws-codedeploy": "1.100.0",
-        "@aws-cdk/custom-resources": "1.100.0",
-        "@aws-cdk/aws-ec2": "1.100.0",
-        "@aws-cdk/aws-ecr-assets": "1.100.0",
-        "@aws-cdk/aws-ecs-patterns": "1.100.0",
-        "@aws-cdk/aws-elasticache": "1.100.0",
-        "@aws-cdk/aws-elasticloadbalancingv2": "1.100.0",
-        "@aws-cdk/aws-events": "1.100.0",
-        "@aws-cdk/aws-events-targets": "1.100.0",
-        "@aws-cdk/aws-iam": "1.100.0",
-        "@aws-cdk/aws-lambda": "1.100.0",
-        "@aws-cdk/aws-lambda-event-sources": "1.100.0",
-        "@aws-cdk/aws-logs": "1.100.0",
-        "@aws-cdk/aws-rds": "1.100.0",
-        "@aws-cdk/aws-route53": "1.100.0",
-        "@aws-cdk/aws-route53-targets": "1.100.0",
-        "@aws-cdk/aws-sns": "1.100.0",
-        "@aws-cdk/aws-sns-subscriptions": "1.100.0",
-        "@aws-cdk/aws-sqs": "1.100.0",
-        "@aws-cdk/aws-ssm": "1.100.0",
-        "@aws-cdk/aws-wafv2": "1.100.0",
-        "@aws-cdk/core": "1.100.0",
-        "@types/aws-lambda": "^8.10.71",
+        "@aws-cdk/assert": "1.110.0",
+        "@aws-cdk/assets": "1.110.0",
+        "@aws-cdk/aws-apigateway": "1.110.0",
+        "@aws-cdk/aws-apigatewayv2": "1.110.0",
+        "@aws-cdk/aws-certificatemanager": "1.110.0",
+        "@aws-cdk/aws-cloudwatch": "1.110.0",
+        "@aws-cdk/aws-cloudwatch-actions": "1.110.0",
+        "@aws-cdk/aws-cloudfront": "1.110.0",
+        "@aws-cdk/aws-cloudformation": "1.110.0",
+        "@aws-cdk/aws-cloudfront-origins": "1.110.0",
+        "@aws-cdk/aws-codedeploy": "1.110.0",
+        "@aws-cdk/custom-resources": "1.110.0",
+        "@aws-cdk/aws-ec2": "1.110.0",
+        "@aws-cdk/aws-ecr-assets": "1.110.0",
+        "@aws-cdk/aws-ecs-patterns": "1.110.0",
+        "@aws-cdk/aws-elasticache": "1.110.0",
+        "@aws-cdk/aws-elasticloadbalancingv2": "1.110.0",
+        "@aws-cdk/aws-events": "1.110.0",
+        "@aws-cdk/aws-events-targets": "1.110.0",
+        "@aws-cdk/aws-iam": "1.110.0",
+        "@aws-cdk/aws-lambda": "1.110.0",
+        "@aws-cdk/aws-lambda-event-sources": "1.110.0",
+        "@aws-cdk/aws-logs": "1.110.0",
+        "@aws-cdk/aws-rds": "1.110.0",
+        "@aws-cdk/aws-route53": "1.110.0",
+        "@aws-cdk/aws-route53-targets": "1.110.0",
+        "@aws-cdk/aws-sns": "1.110.0",
+        "@aws-cdk/aws-sns-subscriptions": "1.110.0",
+        "@aws-cdk/aws-sqs": "1.110.0",
+        "@aws-cdk/aws-ssm": "1.110.0",
+        "@aws-cdk/aws-wafv2": "1.110.0",
+        "@aws-cdk/core": "1.110.0",
+        "@types/aws-lambda": "^8.10.76",
         "@types/jest": "^26.0.23",
-        "@types/node": "10.17.27",
+        "@types/node": "14.17.4",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
-        "aws-cdk": "1.100.0",
+        "aws-cdk": "1.110.0",
         "change-case": "^4.1.2",
         "concurrently": "^5.3.0",
         "eslint": "^7.19.0",
         "eslint-config-prettier": "^7.2.0",
-        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-prettier": "^3.4.0",
         "husky": "^4.3.8",
         "jest": "^26.6.3",
         "lint-staged": "^10.5.3",
-        "prettier": "^2.2.1",
+        "prettier": "^2.3.0",
         "source-map-support": "^0.5.19",
         "ts-jest": "^26.5.5",
         "ts-node": "^9.0.0",
         "typescript": "^4.1.3"
     },
     "dependencies": {
-        "@middy/core": "^2.2.0",
-        "@middy/http-error-handler": "^2.2.0",
-        "@middy/http-json-body-parser": "^2.2.0",
-        "@middy/validator": "^2.2.0",
+        "@middy/core": "~2.4.0",
+        "@middy/http-error-handler": "~2.4.0",
+        "@middy/http-json-body-parser": "~2.4.0",
+        "@middy/validator": "~2.4.0",
         "@types/http-errors": "^1.8.0",
         "@types/lodash": "^4.14.170",
         "@types/uuid": "^8.3.0",
-        "aws-sdk": "^2.839.0",
+        "aws-sdk": "^2.854.0",
         "aws-xray-sdk": "^3.2.0",
         "cdk-dia": "^0.3.0",
         "http-errors": "^1.8.0",
@@ -108,9 +108,9 @@
         "lambda-log": "^2.4.0",
         "lodash": "^4.17.21",
         "sqlite3": "^5.0.2",
-        "typeorm": "^0.2.32",
-        "typeorm-aurora-data-api-driver": "^2.1.0",
-        "typeorm-naming-strategies": "^2.0.0",
+        "typeorm": "0.2.34",
+        "typeorm-aurora-data-api-driver": "2.1.1",
+        "typeorm-naming-strategies": "2.0.0",
         "typescript-logging": "^1.0.0",
         "uuid": "^8.3.2"
     },
